# asteroids-py

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  SPEC.md  SPEC2.md  api_client.py  asteroid.py  asteroidfield.py  circleshape.py  constants.py  docker-compose.yml  game.py  logger.py  main.py  player.py  pyproject.toml  score_repository.py  shot.py
database/: __init__.py  connection.py  migrator.py  storage.py
database/repositories/: __init__.py  score_repository.py
migrations/: V20260113_01__init.sql  V20260113_02__high_scores.sql
server/: config.py  db.py  main.py  models.py  pyproject.toml
server/database/: __init__.py  connection.py  migrator.py
server/database/repositories/: __init__.py  score_repository.py
server/tests/: conftest.py  test_api.py
states/: __init__.py  base_state.py  game_over_state.py  high_scores_state.py  main_menu_state.py  paused_state.py  playing_state.py
ui/: __init__.py  hud.py
utils/: __init__.py  platform.py
